--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 
       gtag('config', 'AW-17929190992');
     </script>
+    <!-- UTMify Pixel -->
+    <script>
+      window.pixelId = "6990e90ce48640d440fdb986";
+      var a = document.createElement("script");
+      a.setAttribute("async", "");
+      a.setAttribute("defer", "");
+      a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+      document.head.appendChild(a);
+    </script>
   </head>
   <body>
     <div id="root"></div>
